--- a/Backpacking.API/appsettings.Development.json
+++ b/Backpacking.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "User Id=postgres;Password=postgres;Server=BackpackingServer;Host=localhost;Port=5432;Database=Backpacking;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
