--- a/Backpacking.API/Backpacking.API.csproj
+++ b/Backpacking.API/Backpacking.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -19,7 +19,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\v1\" />
     <Folder Include="Models\DTO\" />
     <Folder Include="Logic\" />
     <Folder Include="Tests\" />
