add geocoding service and controller

--- a/Backpacking.API/appsettings.Development.json
+++ b/Backpacking.API/appsettings.Development.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "User Id=postgres;Password=postgres;Server=BackpackingServer;Host=localhost;Port=5432;Database=Backpacking;"
   },
+  "BaseApiStrings": {
+    "PositionStack": "http://api.positionstack.com/v1",
+    "Google": "https://maps.googleapis.com/maps/api/geocode/json"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
